<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.spring</groupId>
    <artifactId>spring-vaadin-touchkit</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <description>Vaadin Spring + Vaadin TouchKit integration example</description>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <version.vaadin>7.7.3</version.vaadin>
        <vaadin.plugin.version>${version.vaadin}</vaadin.plugin.version>
        <start-class>crud.Application</start-class>
    </properties>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>1.3.7.RELEASE</version>
    </parent>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
            <exclusions>
            	<exclusion>
            		<groupId>org.slf4j</groupId>
            		<artifactId>slf4j-api</artifactId>
            	</exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <exclusions>
            	<exclusion>
            		<groupId>javax.validation</groupId>
            		<artifactId>validation-api</artifactId>
            	</exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.vaadin</groupId>
            <artifactId>vaadin-spring-boot</artifactId>
            <version>1.0.0</version>
            <exclusions>
            	<exclusion>
            		<groupId>org.slf4j</groupId>
            		<artifactId>slf4j-api</artifactId>
            	</exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.vaadin</groupId>
            <artifactId>vaadin-server</artifactId>
            <version>${version.vaadin}</version>
            <exclusions>
                <!-- Remove some obsolete stuff not needed by server side Vaadin apps -->
                <exclusion>
                    <artifactId>vaadin-theme-compiler</artifactId>
                    <groupId>com.vaadin</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.vaadin.addon</groupId>
            <artifactId>vaadin-touchkit-agpl</artifactId>
            <version>4.1.0</version>
            <exclusions>
                <!-- For some reason latest touchkit depends on vaadin-themes, which is not needed -->
                <exclusion>
                    <groupId>com.vaadin</groupId>
                    <artifactId>vaadin-themes</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.vaadin</groupId>
            <artifactId>viritin</artifactId>
            <version>1.59</version>
        </dependency>
        <dependency>
        	<groupId>org.springframework.boot</groupId>
        	<artifactId>spring-boot-starter-data-jpa</artifactId>
        	<exclusions>
        		<exclusion>
        			<groupId>org.slf4j</groupId>
        			<artifactId>slf4j-api</artifactId>
        		</exclusion>
        	</exclusions>
        </dependency>
        <dependency>
        	<groupId>org.vaadin.addon</groupId>
        	<artifactId>v-leaflet</artifactId>
        	<version>1.0.3</version>
        </dependency>
        <dependency>
        	<groupId>mysql</groupId>
        	<artifactId>mysql-connector-java</artifactId>
        </dependency>
        <dependency>
        	<groupId>org.vaadin.addon</groupId>
        	<artifactId>v-leaflet-editable</artifactId>
        	<version>1.0.1</version>
        	<exclusions>
        		<exclusion>
        			<groupId>javax.validation</groupId>
        			<artifactId>validation-api</artifactId>
        		</exclusion>
        	</exclusions>
        </dependency>
        <dependency>
        	<groupId>org.vaadin.icons</groupId>
        	<artifactId>vaadin-icons</artifactId>
        	<version>2.0.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
     <!--    <plugin>
                <groupId>in.virit.vwscdn</groupId>
                <artifactId>vwscdn-maven-plugin</artifactId>
                <version>1.3.4</version>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>  --> 
               <plugin>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin-maven-plugin</artifactId>
                <version>${vaadin.plugin.version}</version>
                <configuration>
                    <webappDirectory>${basedir}/src/main/webapp/VAADIN/widgetsets
                    </webappDirectory>
                    <hostedWebapp>${basedir}/src/main/webapp/VAADIN/widgetsets
                    </hostedWebapp>
                    <noServer>true</noServer>
                    <!-- Remove draftCompile when project is ready -->
                    <draftCompile>false</draftCompile>
                    <compileReport>false</compileReport>
                    <style>OBF</style>
                    <persistentunitcachedir>${project.build.directory}</persistentunitcachedir>
                    <deploy>${project.build.directory}/gwt-deploy</deploy>
                    <runTarget>http://localhost:8181/</runTarget>
                    <extraJvmArgs>
                       -Xmx1024M -Xss4024k -XX:MaxPermSize=128m
                    </extraJvmArgs>
                    <disableClassMetadata>false</disableClassMetadata>
                    <disableCastChecking>true</disableCastChecking>
                    <enableClosureCompiler>false</enableClosureCompiler>
                    <disableRunAsync>false</disableRunAsync>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>resources</goal>
                            <goal>update-widgetset</goal>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

               <plugin>
               	<groupId>org.apache.maven.plugins</groupId>
               	<artifactId>maven-jar-plugin</artifactId>
               	 <executions>
				      <execution>
				        <id>default-jar</id>
				        <phase>package</phase>
				        <goals>
				          <goal>jar</goal>
				        </goals>
				        <configuration>
				          <excludes>
				            <exclude>C:/Users/JamesHo/.m2/repository/ch/qos/logback/logback-classic/1.1.7/logback-classic-1.1.7.jar!/org/slf4j/impl/StaticLoggerBinder.class</exclude>
				          </excludes>
				        </configuration>
				      </execution>
				    </executions>
               </plugin>
        </plugins>
        
        <pluginManagement>
            <plugins>
                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
                <plugin>
                    <groupId>org.eclipse.m2e</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>
                                            in.virit.vwscdn
                                        </groupId>
                                        <artifactId>
                                            vwscdn-maven-plugin
                                        </artifactId>
                                        <versionRange>
                                            [1.3.4,)
                                        </versionRange>
                                        <goals>
                                            <goal>generate</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore></ignore>
                                    </action>
                                </pluginExecution>
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>spring-snapshots</id>
            <name>Spring Snapshots</name>
            <url>http://repo.spring.io/snapshot</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>http://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>vaadin-snapshots</id>
            <url>http://oss.sonatype.org/content/repositories/vaadin-snapshots/</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>vaadin-addons</id>
            <url>http://maven.vaadin.com/vaadin-addons</url>
        </repository>

        <repository>
            <id>sonatype-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>

    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>spring-snapshots</id>
            <name>Spring Snapshots</name>
            <url>http://repo.spring.io/snapshot</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </pluginRepository>
        <pluginRepository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>http://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

</project>